@@ -311,6 +311,34 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|httpclient
+operator|.
+name|params
+operator|.
+name|HttpMethodParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|Ivy
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|ivy
 operator|.
 name|util
@@ -1521,6 +1549,24 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|// user-agent
+name|httpClient
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|setParameter
+argument_list|(
+literal|"http.useragent"
+argument_list|,
+literal|"Apache Ivy/"
+operator|+
+name|Ivy
+operator|.
+name|getIvyVersion
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 name|Credentials
 name|c
